# adas-perception-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: scene_default.json
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/diagnostic/: route.ts
frontend/components/: BirdsEyeView.tsx  DetectionOverlay.tsx  DiagnosticPanel.tsx  StatusBar.tsx  TrackTable.tsx
frontend/hooks/: useADASStream.ts
frontend/lib/: threatColors.ts
frontend/types/: adas.ts
include/bridge/: SnapshotSerializer.hpp  WebSocketBridge.hpp
include/common/: Types.hpp
include/fusion/: HungarianAssigner.hpp  KalmanTracker.hpp
include/simulator/: DetectionLoader.hpp  VideoReader.hpp
include/threat/: ThreatClassifier.hpp
include/visualizer/: BirdsEyeView.hpp  ScenePlayer.hpp  Visualizer.hpp
scripts/: extract_detections.py
src/: main.cpp
src/bridge/: SnapshotSerializer.cpp  WebSocketBridge.cpp
src/fusion/: FusionEngine.cpp  HungarianAssigner.cpp
src/simulator/: DetectionLoader.cpp  VideoReader.cpp
src/threat/: ThreatClassifier.cpp
src/visualizer/: BirdsEyeView.cpp  ScenePlayer.cpp  Visualizer.cpp
